// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog component opens the popover once trigger is clicked 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-bnQNAg {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: auto;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 1147483646;
  }

  .c-bnQNAg:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-fYlVmN {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 1147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-jryFOR-dtbHih-size-sm {
    font-size: var(--fontSizes-lg);
    line-height: 1.14;
  }

  .c-jryFOR-dtbHih-size-sm::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-dtbHih-size-sm::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }

  .c-dhzjXW-hmJoPD-justify-end {
    justify-content: end;
  }

  .c-bnQNAg-lgqbzh-size-sm {
    width: 480px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fDzwZw-ifOCxRY-css {
    position: absolute;
    right: var(--space-4);
    top: var(--space-4);
    height: var(--sizes-5);
    width: var(--sizes-5);
  }

  .c-jryFOR-ijkrzPY-css {
    border-bottom: 1px solid var(--colors-tonal100);
    font-family: var(--fonts-body);
    padding: 0 var(--space-5) var(--space-5) var(--space-5);
    margin-bottom: var(--space-5);
    margin-left: calc(var(--space-5)*-1);
    margin-right: calc(var(--space-5)*-1);
    box-sizing: content-box;
  }

  .c-dhzjXW-illFGmD-css {
    padding-top: var(--space-4);
  }
}

<div
  aria-describedby="radix-5"
  aria-label="Dialog"
  aria-labelledby="radix-4"
  class="c-bnQNAg c-bnQNAg-lgqbzh-size-sm"
  data-state="open"
  id="radix-3"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  <button
    aria-label="Close dialog"
    class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-ifOCxRY-css"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m6.343 6.343 11.314 11.314m-11.314 0L17.657 6.343"
      />
    </svg>
  </button>
  <h2
    class="c-jryFOR c-jryFOR-dtbHih-size-sm c-jryFOR-ijkrzPY-css"
  >
    TITLE
  </h2>
  CONTENT
  <div
    class="c-dhzjXW c-dhzjXW-hmJoPD-justify-end c-dhzjXW-illFGmD-css"
  >
    FOOTER
  </div>
</div>
`;

exports[`Dialog component renders the trigger with the popover hidden by default 1`] = `
<div>
  <button
    aria-controls="radix-0"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    TRIGGER
  </button>
</div>
`;

exports[`Dialog component with custom background renders 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-bnQNAg {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: auto;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 1147483646;
  }

  .c-bnQNAg:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-fYlVmN {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 1147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}

  .c-kNieLL {
    width: 100vw;
    height: 100vh;
  }
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-jryFOR-dtbHih-size-sm {
    font-size: var(--fontSizes-lg);
    line-height: 1.14;
  }

  .c-jryFOR-dtbHih-size-sm::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-dtbHih-size-sm::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }

  .c-dhzjXW-hmJoPD-justify-end {
    justify-content: end;
  }

  .c-bnQNAg-lgqbzh-size-sm {
    width: 480px;
  }
}

@media  {
  .c-fDzwZw-otpKd-cv {
    background: transparent;
    color: var(--colors-tonal300);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):hover,
  .c-fDzwZw-otpKd-cv:not(:disabled):focus {
    color: var(--colors-primaryMid);
  }

  .c-fDzwZw-otpKd-cv:not(:disabled):active {
    color: var(--colors-primaryDark);
  }

  .c-fDzwZw-otpKd-cv[disabled] {
    color: var(--colors-tonal400);
    cursor: not-allowed;
  }
}

@media  {
  .c-fDzwZw-ifOCxRY-css {
    position: absolute;
    right: var(--space-4);
    top: var(--space-4);
    height: var(--sizes-5);
    width: var(--sizes-5);
  }

  .c-jryFOR-ijkrzPY-css {
    border-bottom: 1px solid var(--colors-tonal100);
    font-family: var(--fonts-body);
    padding: 0 var(--space-5) var(--space-5) var(--space-5);
    margin-bottom: var(--space-5);
    margin-left: calc(var(--space-5)*-1);
    margin-right: calc(var(--space-5)*-1);
    box-sizing: content-box;
  }

  .c-dhzjXW-illFGmD-css {
    padding-top: var(--space-4);
  }
}

<div
  class="c-fYlVmN"
  data-state="open"
  id="modal_overlay"
  style="pointer-events: auto;"
>
  <div
    aria-hidden="true"
    class="c-PJLV c-kNieLL"
    data-aria-hidden="true"
  >
    CUSTOM BACKGROUND
  </div>
  <div
    aria-describedby="radix-20"
    aria-label="Dialog"
    aria-labelledby="radix-19"
    class="c-bnQNAg c-bnQNAg-lgqbzh-size-sm"
    data-state="open"
    id="radix-18"
    role="dialog"
    style="pointer-events: auto;"
    tabindex="-1"
  >
    <button
      aria-label="Close dialog"
      class="c-fDzwZw c-fDzwZw-PrXKS-size-md c-fDzwZw-otpKd-cv c-fDzwZw-ifOCxRY-css"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c-dbrbZt c-dbrbZt-dMrjnF-size-md c-dbrbZt-iPJLV-css"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6.343 6.343 11.314 11.314m-11.314 0L17.657 6.343"
        />
      </svg>
    </button>
    CONTENT
  </div>
</div>
`;

exports[`Dialog component without close button renders 1`] = `
@media  {
  .c-fDzwZw {
    align-items: center;
    -webkit-appearance: none;
    appearance: none;
    background: white;
    border: unset;
    border-radius: var(--radii-0);
    box-sizing: border-box;
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding: unset;
    transition: all 100ms ease-out;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-jryFOR {
    font-family: var(--fonts-display);
    font-weight: 700;
    margin: 0;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-bnQNAg {
    background: white;
    border-radius: var(--radii-1);
    box-shadow: var(--shadows-3);
    box-sizing: border-box;
    left: 50%;
    max-width: 90vw;
    max-height: 90vh;
    overflow-y: auto;
    padding: var(--space-5);
    position: fixed;
    top: 50%;
    transform: translate3d(-50%, -50%, 0);
    z-index: 1147483646;
  }

  .c-bnQNAg:focus {
    outline: none;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="open"] {
      animation: k-iaWRFC 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-bnQNAg[data-state="closed"] {
      animation: k-gturUW 550ms cubic-bezier(0.22, 1, 0.36, 1);
    }
}

  .c-fYlVmN {
    background-color: var(--colors-alpha600);
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: fixed;
    overflow-y: auto;
    z-index: 1147483646;
  }

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="open"] {
      animation: k-eyOShd 250ms ease-out;
    }
}

@media (prefers-reduced-motion: no-preference) {
    .c-fYlVmN[data-state="closed"] {
      animation: k-bHbNKp 550ms ease-out;
    }
}
}

@media  {
  .c-fDzwZw-PrXKS-size-md {
    height: var(--sizes-4);
    width: var(--sizes-4);
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-jryFOR-dtbHih-size-sm {
    font-size: var(--fontSizes-lg);
    line-height: 1.14;
  }

  .c-jryFOR-dtbHih-size-sm::before {
    content: '';
    margin-bottom: -0.2174em;
    display: table;
  }

  .c-jryFOR-dtbHih-size-sm::after {
    content: '';
    margin-top: -0.2254em;
    display: table;
  }

  .c-dhzjXW-hmJoPD-justify-end {
    justify-content: end;
  }

  .c-bnQNAg-lgqbzh-size-sm {
    width: 480px;
  }
}

<div
  aria-describedby="radix-17"
  aria-label="Dialog"
  aria-labelledby="radix-16"
  class="c-bnQNAg c-bnQNAg-lgqbzh-size-sm"
  data-state="open"
  id="radix-15"
  role="dialog"
  style="pointer-events: auto;"
  tabindex="-1"
>
  CONTENT
</div>
`;
